--- a/qiyexiaohao/css/mint-ui-style.css
+++ b/qiyexiaohao/css/mint-ui-style.css
@@ -1259,8 +1259,9 @@
 .mint-popup {
 	position: fixed;
 	background: #fff;
-	top: 50%;
+	top: 46px;
 	left: 50%;
+	width: 100%;
 	-webkit-transform: translate3d(-50%, -50%, 0);
 	transform: translate3d(-50%, -50%, 0);
 	-webkit-backface-visibility: hidden;
@@ -1917,9 +1918,9 @@
 .v-modal {
 	position: fixed;
 	left: 0;
-	top: 0;
+	top: 90px;
 	width: 100%;
-	height: 100%;
+	height: 200%;
 	opacity: .5;
 	background: #000
 }
