--- a/qiyexiaohao/css/mint-ui-style.css
+++ b/qiyexiaohao/css/mint-ui-style.css
@@ -912,16 +912,12 @@
 	z-index: 1
 }
 
-.mint-search {
-	height:45px;
-	overflow: hidden
-}
 
 .mint-searchbar {
 	position: relative;
 	background-color: #d9d9d9;
 	box-sizing: border-box;
-	padding: 8px 10px;
+	padding: 5px;
 	z-index: 1
 }
 
@@ -962,9 +958,10 @@
 }
 
 .mint-searchbar-cancel {
-	color: #26a2ff;
+	color: #00acf8;
 	margin-left: 10px;
-	text-decoration: none
+	text-decoration: none;
+	font-size: 15px
 }
 
 .mint-search-list {
