--- a/qiyexiaohao/css/mint-ui-style.css
+++ b/qiyexiaohao/css/mint-ui-style.css
@@ -822,7 +822,7 @@
 
 .mint-tab-item-label {
 	color: inherit;
-	font-size: 12px;
+	font-size: 15px;
 	line-height: 1
 }
 
@@ -859,7 +859,7 @@
 }
 
 .mint-navbar .mint-tab-item {
-	padding: 17px 0;
+	padding: 13px 0;
 	font-size: 15px
 }
 
@@ -870,7 +870,7 @@
 .mint-navbar .mint-tab-item.is-selected {
 	border-bottom: 3px solid #26a2ff;
 	color: #26a2ff;
-	margin-bottom: -3px
+	border-right: 1px solid #dedede;
 }
 
 .mint-navbar.is-fixed {
