--- a/qiyexiaohao/css/common.css
+++ b/qiyexiaohao/css/common.css
@@ -32,3 +32,11 @@ header>h1 {
 	padding: 2px;
 	margin: 0 0 0 10px;
 }
+
+.i_flag_2 {
+	background: #ff4400;
+	color: #fff;
+	font-size: 8px;
+	padding: 2px;
+	margin: 0 0 0 10px;
+}
