--- a/qiyexiaohao/css/mint-ui-style.css
+++ b/qiyexiaohao/css/mint-ui-style.css
@@ -822,7 +822,7 @@
 
 .mint-tab-item-label {
 	color: inherit;
-	font-size: 15px;
+	font-size: 12px;
 	line-height: 20px;
 }
 
@@ -860,7 +860,7 @@
 }
 
 .mint-navbar .mint-tab-item {
-	padding: 5px 0;
+	padding: 0;
 	border-right: 1px solid #dedede;
 	font-size: 15px
 }
