--- a/qiyexiaohao/css/iconfont.css
+++ b/qiyexiaohao/css/iconfont.css
@@ -1,96 +1,108 @@
-	@font-face {
-		font-family: "iconfont";
-		src: url('../fonts/iconfont.ttf?t=1524104200377') format('truetype');
-	}
-	
-	.iconfont {
-		font-family: "iconfont" !important;
-		font-size: 16px;
-		font-style: normal;
-		-webkit-font-smoothing: antialiased;
-		-moz-osx-font-smoothing: grayscale;
-	}
-	
-	.icon-lianxiren:before {
-		content: "\e654";
-	}
-	
-	.icon-suo:before {
-		content: "\e65d";
-	}
-	
-	.icon-sandian:before {
-		content: "\e602";
-	}
-	
-	.icon-jiantou:before {
-		content: "\e603";font-size: 25px
-	}
-	
-	.icon-shouji:before {
-		content: "\e604";
-	}
-	
-	.icon-shezhi:before {
-		content: "\e605";
-	}
-	
-	.icon-xunhuan:before {
-		content: "\e606";
-	}
-	
-	.icon-dingdan-duanxin:before {
-		content: "\e607";
-	}
-	
-	.icon-tongxunlu:before {
-		content: "\e608";
-	}
-	
-	.icon-hurujiantou:before {
-		content: "\e609";
-	}
-	
-	.icon-dianjihoudesanheng:before {
-		content: "\e60a";font-size: 16px;
-	}
-	
-	.icon-duanxinfasongjiantou:before {
-		content: "\e60b";
-	}
-	
-	.icon-duanxinxinjianlianxirenjiahao:before {
-		content: "\e60c";font-size: 15px
-	}
-	
-	.icon-duanxintianjialianxiren:before {
-		content: "\e60d";
-	}
-	
-	.icon-huchujiantou:before {
-		content: "\e60e";
-	}
-	
-	.icon-lianxiren1:before {
-		content: "\e60f";
-	}
-	
-	.icon-sanheng:before {
-		content: "\e610";
-	}
-	
-	.icon-shanchu:before {
-		content: "\e611";
-	}
-	
-	.icon-tongxunlu1:before {
-		content: "\e612";
-	}
-	
-	.icon-weijiejiantou:before {
-		content: "\e613";
-	}
-	
-	.icon-tongxunluyuanjiajiantou:before {
-		content: "\e614";
-	}
+@font-face {
+	font-family: "iconfont";
+	src: url('../fonts/iconfont.ttf?t=1524215075029') format('truetype')
+}
+
+.iconfont {
+	font-family: "iconfont" !important;
+	font-size: 16px;
+	font-style: normal;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-sandian:before {
+	content: "\e602";
+}
+
+.icon-jiantou:before {
+	content: "\e603";
+}
+
+.icon-shouji:before {
+	content: "\e604";
+}
+
+.icon-shezhi:before {
+	content: "\e605";
+}
+
+.icon-xunhuan:before {
+	content: "\e606";
+}
+
+.icon-dingdan-duanxin:before {
+	content: "\e607";
+}
+
+.icon-tongxunlu:before {
+	content: "\e608";
+}
+
+.icon-hurujiantou:before {
+	content: "\e609";
+}
+
+.icon-dianjihoudesanheng:before {
+	content: "\e60a";font-size: 12px;
+}
+
+.icon-duanxinfasongjiantou:before {
+	content: "\e60b";
+}
+
+.icon-duanxinxinjianlianxirenjiahao:before {
+	content: "\e60c";
+}
+
+.icon-duanxintianjialianxiren:before {
+	content: "\e60d";
+}
+
+.icon-huchujiantou:before {
+	content: "\e60e";
+}
+
+.icon-lianxiren:before {
+	content: "\e60f";
+}
+
+.icon-sanheng:before {
+	content: "\e610";
+}
+
+.icon-shanchu:before {
+	content: "\e611";font-size: 16px
+}
+
+.icon-tongxunlu1:before {
+	content: "\e612";
+}
+
+.icon-weijiejiantou:before {
+	content: "\e613";
+}
+
+.icon-tongxunluyuanjiajiantou:before {
+	content: "\e614";
+}
+
+.icon-weijielaidian:before {
+	content: "\e615";
+}
+
+.icon-dingshi:before {
+	content: "\e616";
+}
+
+.icon-bushouduanxin:before {
+	content: "\e617";
+}
+
+.icon-shanchudianhuahaoma:before {
+	content: "\e618";
+}
+
+.icon-tonghuajilu:before {
+	content: "\e619";    font-size: 16px;
+}
