--- a/qiyexiaohao/css/common.css
+++ b/qiyexiaohao/css/common.css
@@ -1,3 +1,26 @@
+@media screen and (min-width: 320px) {
+    html {font-size: 14px;}
+}
+ 
+@media screen and (min-width: 360px) {
+    html {font-size: 16px;}
+}
+ 
+@media screen and (min-width: 400px) {
+    html {font-size: 18px;}
+}
+ 
+@media screen and (min-width: 440px) {
+    html {font-size: 20px;}
+}
+ 
+@media screen and (min-width: 480px) {
+    html {font-size: 22px;}
+}
+ 
+@media screen and (min-width: 640px) {
+    html {font-size: 28px;}
+}
 .main-color {
 	color: #00acf8;
 }
@@ -20,11 +43,11 @@ header>h1 {
 	color:#ff4400
 }
 .font_15 {
-	font-size: 15px
+	font-size: 1.07rem
 }
 
 .font-size-12 {
-	font-size: 12px
+	font-size: 0.85rem
 }
 
 .i_flag {
