--- a/qiyexiaohao/css/iconfont.css
+++ b/qiyexiaohao/css/iconfont.css
@@ -44,7 +44,7 @@
 }
 
 .icon-dianjihoudesanheng:before {
-	content: "\e60a";font-size: 12px;
+	content: "\e60a";
 }
 
 .icon-duanxinfasongjiantou:before {
