--- a/qiyexiaohao/css/common.css
+++ b/qiyexiaohao/css/common.css
@@ -1,78 +1,1 @@
-@media screen and (min-width: 320px) {
-    html {font-size: 14px;}
-}
- 
-@media screen and (min-width: 360px) {
-    html {font-size: 16px;}
-}
- 
-@media screen and (min-width: 400px) {
-    html {font-size: 18px;}
-}
- 
-@media screen and (min-width: 440px) {
-    html {font-size: 20px;}
-}
- 
-@media screen and (min-width: 480px) {
-    html {font-size: 22px;}
-}
- 
-@media screen and (min-width: 640px) {
-    html {font-size: 28px;}
-}
-.main-color {
-	color: #00acf8;
-}
-
-.color_333 {
-	color: #333;
-}
-.color_666 {
-	color: #666;
-}
-header {
-	background-color: #fff !important;
-}
-header>a,
-header>h1 {
-	color: #333;
-}
-
-.color_red{
-	color:#ff4400
-}
-.font_15 {
-	font-size: 0.93rem
-}
-.font_16 {
-	font-size: 1rem;
-}
-.font_18 {
-	font-size: 1.12rem
-}
-.font-size-12 {
-	font-size: 0.85rem
-}
-
-.i_flag {
-	background: #00acf8;
-	color: #fff;
-	font-size: 0.31rem;
-	padding: 0.12rem;
-	margin: 0 0 0 0.62rem;
-}
-
-.i_flag_2 {
-	background: #ff4400;
-	color: #fff;
-	font-size: 0.31rem;
-	padding: 0.12rem;
-	margin: 0 0 0 0.62rem;
-}
-header>.icon-dianjihoudesanheng:before{
-	font-size: 1rem
-}
-header>.icon-shanchu:before{
-	font-size: 1.31rem
-}
+@media screen and (min-width: 320px){html{font-size:14px}}@media screen and (min-width: 360px){html{font-size:16px}}@media screen and (min-width: 400px){html{font-size:18px}}@media screen and (min-width: 440px){html{font-size:20px}}@media screen and (min-width: 480px){html{font-size:22px}}@media screen and (min-width: 640px){html{font-size:28px}}.main-color{color:#00acf8}.color_333{color:#333}.color_666{color:#666}header{background-color:#fff !important}header > a,header > h1{color:#333}.color_red{color:#ff4400}.font_15{font-size:0.93rem}.font_16{font-size:1rem}.font_18{font-size:1.12rem}.font-size-12{font-size:0.85rem}.i_flag{background:#00acf8;color:#fff;font-size:0.31rem;padding:0.12rem;margin:0 0 0 0.62rem}.i_flag_2{background:#ff4400;color:#fff;font-size:0.31rem;padding:0.12rem;margin:0 0 0 0.62rem}header > .icon-dianjihoudesanheng:before{font-size:1rem}header > .icon-shanchu:before{font-size:1.31rem}
