--- a/qiyexiaohao/css/style/main.css
+++ b/qiyexiaohao/css/style/main.css
@@ -1,115 +1,1 @@
-.span_right {
-	position: relative;
-	bottom: 0.5rem;
-}
-
-.mui-input-group:after,
-.mui-input-group .mui-input-row:after {
-	height: 0;
-}
-
-.mui-grid-view.mui-grid-9 {
-	background-color: #fff;
-}
-
-.input_keybord {
-	position: fixed;
-	z-index: 10;
-	bottom: 0;
-}
-
-.filter_result {
-	background: #fff;
-	z-index: 10;
-}
-
-.filter_result .mui-table-view:before {
-	height: 0;
-}
-
-.filter_result .back {
-	padding: 0.62rem 0.62rem 0;
-}
-
-.filter_result .mui-table-view-cell {
-	background-color: #fff;
-}
-
-.fade-enter-active,
-.fade-leave-active {
-	transition: opacity .6s;
-}
-
-.fade-enter,
-.fade-leave-to {
-	opacity: 0;
-}
-
-#middlePopover {
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	margin: auto;
-	height: 72px;
-    border: 1px solid #dedede;
-}
-#middlePopover .mui-table-view-cell{
-	padding: 6px 15px;
-}
-.mui-popover .mui-scroll-wrapper {
-    margin: 0 0;
-    }
-
-.mui-input-row label {
-	float: right;
-	padding: 0.62rem 0.62rem 0 1.87rem;
-}
-
-.mui-input-row button {
-	padding: 0 0.31rem;
-	border-bottom-left-radius: 50px;
-	border-top-left-radius: 50px;
-}
-
-.mui-input-row label[class='f'] {
-	font-family: 'Helvetica Neue', Helvetica, sans-serif;
-	line-height: 1.1;
-	float: left;
-	width: 25%;
-	padding: 11px 15px;
-}
-
-.mui-input-row label~input {
-	width: 50%;
-}
-
-.mui-input-row input[type=text] {
-	text-align: center;
-	padding: 2px 5px;
-	font-size: 1.12rem;
-	height: 3.12rem;
-}
-
-#keyborde>li>span {
-	font-size: 1.25rem;
-}
-
-.bottom_del_div {
-	position: fixed;
-	bottom: 0;
-	z-index: 9;
-}
-
-.mui-table-view {
-	margin-bottom: 45px;
-}
-
-.mui-input-group,
-.mui-input-group .mui-input-row {
-	height: 3.12rem;
-}
-
-.mui-icon-closeempty{
-	font-size: 1.75rem;
-}
+.span_right{position:relative;bottom:0.5rem}.mui-input-group .mui-input-row:after,.mui-input-group:after{height:0}.mui-grid-view.mui-grid-9{background-color:#fff}.input_keybord{position:fixed;z-index:10;bottom:0}.filter_result{background:#fff;z-index:10}.filter_result .mui-table-view:before{height:0}.filter_result .back{padding:0.62rem 0.62rem 0}.filter_result .mui-table-view-cell{background-color:#fff}.fade-enter-active,.fade-leave-active{transition:opacity 0.6s}.fade-enter,.fade-leave-to{opacity:0}.mui-input-row label{float:right;padding:0.62rem 0.62rem 0 1.87rem}.mui-input-row button{padding:0 0.31rem;border-bottom-left-radius:50px;border-top-left-radius:50px}.mui-input-row label[class='f']{font-family:'Helvetica Neue', Helvetica, sans-serif;line-height:1.1;float:left;width:25%;padding:11px 15px}.mui-input-row label~input{width:50%}.mui-input-row input[type=text]{text-align:center;padding:2px 5px;font-size:1.12rem;height:3.12rem}#keyborde > li > span{font-size:1.25rem}.bottom_del_div{position:fixed;bottom:0;z-index:9}.mui-table-view{}.mui-input-group,.mui-input-group .mui-input-row{height:3.12rem}.mui-icon-closeempty{font-size:1.75rem}
